--- a/curi.html
+++ b/curi.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CV - Bouchra Ouedraogo</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+  <header>
+    <div class="logo">Bouchra <span>Ouedraogo</span></div>
+    <nav>
+      <ul>
+        <li><a href="#" class="active">Accueil</a></li>
+        <li><a href="#">À propos</a></li>
+        <li><a href="#">Parcours</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <a href="cv-bouchra.pdf" class="download-btn" download>Télécharger CV ⬇</a>
+  </header>
+
+  <section class="hero">
+    <div class="hero-image">
+      <!-- Remplace l’URL ci-dessous par ta vraie photo -->
+      <img src="https://i.imgur.com/7k12EPD.jpg" alt="Photo de profil">
+    </div>
+
+    <div class="hero-content">
+      <h1>Bouchra <br><span>Ouedraogo</span></h1>
+      <h3 class="role">MARKETEUSE DIGITALE</h3>
+      <p>
+        Passionnée par le marketing digital et la communication visuelle,<br>
+        j’aide les entreprises à créer un impact fort sur le web.<br>
+        Créative, organisée et orientée résultats, j’aime donner vie à des projets uniques<br>
+        qui allient stratégie et innovation.
+      </p>
+      <a href="#" class="contact-btn">Me contacter</a>
+    </div>
+  </section>
 </body>
 </html>
